2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el (twittering-sign-simple-string)
	(twittering-sign-string-default-function)
	(twittering-sign-string-function, twittering-sign-string): Add
	new.
	(twittering-update-status-if-not-blank): Fix params, support sign.

2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el (twittering-mode-map)
	(twittering-format-status, twittering-retweet): Add new feature
	ReTweet

2009-06-18  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el
	(twittering-status-to-status-datum):
	Read 'in_reply_to_status_id' and 'in_reply_to_user_id' attributes.
	(twittering-format-status):
	Add new '%r' format string for " in reply to user".
	(twittering-update-status-if-not-blank):
	Code refactoring. No need to use (format) to convert a string.

2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el (twittering-status-format)
	(twittering-format-status, twittering-status-to-status-datum)
	(twittering-update-status-if-not-blank, twittering-enter): Fix
	in_reply_to_status_id support not work problem, and marge Alberl
	patch below.

2009-06-17  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el (twittering-last-timeline-interactive): New
	add variable.
	(twittering-new-tweets-count): Ditto.
	(twittering-new-tweets-hook): Ditto.
	(twittering-mode-map): Add new binding v/V
	(twittering-http-get-default-sentinel): Add new hook support
	`twittering-new-tweets-hook'.
	(twittering-render-timeline, twittering-get-timeline): Support
	console emacs.
	(twittering-current-timeline-interactive): Add new function.
	(twittering-current-timeline-noninteractive): Ditto.
	(twittering-other-user-timeline): Ditto.
	(twittering-other-user-timeline-interactive): Ditto.
	(twittering-status-to-status-datum): Add support status id and
	reply to id.
	(twittering-update-status-if-not-blank): Ditto.
	(twittering-update-status-from-minibuffer): Ditto.
